Projeler silindi, dil değiştirmesi yapıldı

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -2,10 +2,9 @@
 # General Site Settings
 
 menu:
-- {name: 'Projects', url: ''}
-- {name: 'Blog', url: 'pages/blog.html'}
-- {name: 'About', url: 'pages/about.html'}
-- {name: 'Contact', url: 'pages/contact.html'}
+- {name: 'Projeler', url: ''}
+- {name: 'Hakkımda', url: 'sayfalar/hakkimda.html'}
+- {name: 'İletişim', url: 'sayfalar/iletisim.html'}
 
 #-------------------------------
 # SEO Section
